@@ -7,7 +7,7 @@ $core->doing_feed = true;
 // see https://www.jsonfeed.org/version/1.1/ for details
 $json = array(
 	'version' => 'https://jsonfeed.org/version/1.1',
-	'title' => $core->config->get( 'site_title' ),
+	'title' => get_config( 'site_title' ),
 	'description' => '',
 	'home_page_url' => url(),
 	'feed_url' => url('feed/json'),
@@ -23,7 +23,7 @@ if( $author ) {
 	if( ! empty($author['avatar']) ) $json['authors']['avatar'] = $author['avatar'];
 }
 
-$limit_count = $core->config->get('feed_limit_posts');
+$limit_count = get_config('feed_limit_posts');
 $posts = $core->posts->limit($limit_count)->get();
 
 if( count($posts) ) {
